[tool.poetry]
name = "algo-trading"
version = "0.1.0"
description = ""
authors = ["nkietwee <nawaporn.kiet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
ta = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
